--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "nest-component": "nest generate module %npm_config_name% && nest generate controller %npm_config_name% && nest generate service %npm_config_name%"
   },
   "dependencies": {
+    "@apicore/nestjs": "^0.0.1",
     "@apicore/teiu": "^5.1.0",
     "@nestjs/axios": "^0.1.0",
     "@nestjs/common": "^9.0.0",
