--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "nest-component": "nest generate module components/%npm_config_name% && nest generate controller components/%npm_config_name% && nest generate service components/%npm_config_name%"
   },
   "dependencies": {
-    "@apicore/nestjs": "^0.2.0",
-    "@apicore/teiu": "^6.0.4",
+    "@apidevteam/core-nestjs": "^1.0.0",
+    "@apidevteam/core-teiu": "^1.0.0",
     "@nestjs/axios": "^0.1.0",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.2.0",
